# claude-context-local

./: .gitignore  CLAUDE.md  README.md  USAGE_GUIDE.md  __init__.py  conftest.py  pyproject.toml  pytest.ini
chunking/: __init__.py  multi_language_chunker.py  python_ast_chunker.py  tree_sitter.py  tree_sitter_fixed.py
embeddings/: __init__.py  embedder.py
mcp_server/: __init__.py  server.py
merkle/: __init__.py  change_detector.py  merkle_dag.py  snapshot_manager.py
scripts/: __init__.py  download_model.py  download_model_standalone.py  index_codebase.py  install.sh
search/: __init__.py  incremental_indexer.py  indexer.py  searcher.py
tests/: README.md  __init__.py  run_tests.py
tests/fixtures/: __init__.py  sample_code.py
tests/integration/: test_auto_reindex.py  test_full_flow.py  test_incremental_indexing.py  test_mcp_indexing.py  test_mcp_project_storage.py  test_system.py
tests/test_data/multi_language/: App.svelte  Calculator.cpp  Calculator.cs  Calculator.java  Component.jsx  Component.tsx  calculator.c  calculator.go  calculator.rs  example.js  example.py  example.ts
tests/test_data/python_project/: main.py
tests/test_data/python_project/src/api/: handlers.py
tests/test_data/python_project/src/auth/: authenticator.py
tests/test_data/python_project/src/database/: connection.py
tests/test_data/python_project/src/utils/: helpers.py  validators.py
tests/unit/: test_chunking.py  test_embeddings.py  test_indexing.py  test_mcp_server.py  test_merkle.py  test_multi_language.py  test_tree_sitter.py  test_tree_sitter_fixed.py
